<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/ssid_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/ap_ssid_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/ap_password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:singleLine="true" />
    </LinearLayout>

    <Button
        android:id="@+id/confirm_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_count_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/device_count_edit"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/bssid_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/ap_bssid_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <Switch
        android:id="@+id/PM_Switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PMSwitch"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/HT_Switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/HTSwitch"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Switch
        android:id="@+id/GPS_Switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GPSSwitch"
        android:textColor="#000000"
        android:textSize="18sp" />

</LinearLayout>