<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Datadisplay">

    <Button
        android:id="@+id/google"
        android:layout_width="98dp"
        android:layout_height="38dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/googlemap"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.666" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="354dp"
        android:layout_height="206dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/PM10_Key"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:text="@string/PM10"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/PM10_Value"
                android:layout_width="180dp"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/PM10_unit"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:text="@string/PM_unit"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/PM25_Key"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:text="@string/PM25"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/PM25_Value"
                android:layout_width="180dp"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/PM25_unit"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:text="@string/PM_unit"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/PM100_Key"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:text="@string/PM100"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/PM100_Value"
                android:layout_width="180dp"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/PM100_unit"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:text="@string/PM_unit"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Humi_Key"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:text="@string/Humidity"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Humi_Value"
                android:layout_width="180dp"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Humi_unit"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:text="@string/Humidity_umit"
                android:textAlignment="center"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Temp_Key"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:text="@string/Temperature"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Temp_Value"
                android:layout_width="180dp"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Temp_unit"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:text="@string/temperture_unit"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Lat_Key"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:text="@string/Latitude"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Lat_Value"
                android:layout_width="180dp"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Long_Key"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:text="@string/Longitude"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Long_Value"
                android:layout_width="180dp"
                android:layout_height="28dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.gms.maps.MapView
        xmlns:map = "http://schemas.android.com/apk/res-auto"
        android:id="@+id/mapView"
        android:layout_width="352dp"
        android:layout_height="279dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.804"
        map:cameraZoom = "15"/>

    <com.amap.api.maps2d.MapView
        android:id="@+id/map"
        android:layout_width="352dp"
        android:layout_height="279dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.803" />

    <Button
        android:id="@+id/GD"
        android:layout_width="103dp"
        android:layout_height="38dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/GDmap"
        app:layout_constraintBottom_toTopOf="@+id/map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.666" />

    <TextView
        android:id="@+id/maptitle"
        android:layout_width="116dp"
        android:layout_height="27dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/googlemap"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/map"
        app:layout_constraintEnd_toStartOf="@+id/GD"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>